--- a/my bio/yelowflex.html
+++ b/my bio/yelowflex.html
@@ -31,11 +31,11 @@
   <div class="container">
     <p>Page Layout Methods</p>
 
-    <li><a href="./html-table.html">HTML Table</a></li>
-    <li><a href="./inline-block.html">Inline-Block</a></li>
-    <li><a href="./absolute-position.html">Absolute Positioning</a></li>
-    <li><a href="./float.html">Float</a></li>
-    <li><a href="./flex.html">Flexbox</a></li>
+    <li style="color: rgb(14, 111, 208);">HTML Table</li>
+    <li style="color: rgb(14, 111, 208);">Inline-Block</li>
+    <li style="color: rgb(14, 111, 208);">Absolute Positioning</li>
+    <li style="color: rgb(14, 111, 208);">Float</li>
+    <li style="color: rgb(14, 111, 208);">Flexbox</li>
 
   </div>
 </body>
